--- a/Company.ObjectDictionary.Service/Company.ObjectDictionary.Service.csproj
+++ b/Company.ObjectDictionary.Service/Company.ObjectDictionary.Service.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.3.1" />
   </ItemGroup>
 
   <ItemGroup>
